@@ -1,6 +1,7 @@
 package hw4.puzzle;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -10,6 +11,7 @@ import java.util.Objects;
 public class CommonBugDetector {
     public static class CommonBugPuzzleState implements WorldState {
         private char name;
+
         public CommonBugPuzzleState() {
             name = 's';
         }
@@ -32,14 +34,33 @@ public class CommonBugDetector {
         @Override
         public Iterable<WorldState> neighbors() {
             switch (name) {
-                case('s'): return createWorldStateList(List.of('a', 'x'));
-                case('a'): return createWorldStateList(List.of('b'));
-                case('b'): return createWorldStateList(List.of('c'));
-                case('c'): return createWorldStateList(List.of('d'));
-                case('d'): return createWorldStateList(List.of('e'));
-                case('e'): return createWorldStateList(List.of('g'));
-                case('x'): return createWorldStateList(List.of('c'));
-                default: return null;
+                case ('s'):
+//                    return createWorldStateList(List.of('a', 'x'));
+                    return createWorldStateList(Arrays.asList('a', 'x'));
+                case ('a'):
+//                    return createWorldStateList(List.of('b'));
+                    return createWorldStateList(Arrays.asList('b'));
+                case ('b'):
+//                    return createWorldStateList(List.of('c'));
+                    return createWorldStateList(Arrays.asList('c'));
+                case ('c'):
+//                    return createWorldStateList(List.of('d'));
+                    return createWorldStateList(Arrays.asList('d'));
+
+                case ('d'):
+//                    return createWorldStateList(List.of('e'));
+                    return createWorldStateList(Arrays.asList('e'));
+
+                case ('e'):
+//                    return createWorldStateList(List.of('g'));
+                    return createWorldStateList(Arrays.asList('g'));
+
+                case ('x'):
+//                    return createWorldStateList(List.of('c'));
+                    return createWorldStateList(Arrays.asList('c'));
+
+                default:
+                    return null;
             }
         }
 
@@ -80,7 +101,7 @@ public class CommonBugDetector {
         AlphabetEasyPuzzle aep = new AlphabetEasyPuzzle('a');
         Solver s3 = new Solver(aep);
         System.out.println("TODO: Print out the number of total things ever"
-                           + " enqueued in your MinPQ and compare to the comments.");
+                + " enqueued in your MinPQ and compare to the comments.");
         // if you print out the total number of items enqueued by s3
         // it should be approximately 25, not approximately 50.
     }
